# Meta-Skill-Engineering

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  WINDOWS_BUILD_GUIDE.md  implementation.md  index.html  package-lock.json  package.json  plan1.md  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml  opencode-instructions.md
.opencode/: package-lock.json
LibraryUnverified/: README.md
LibraryWorkbench/: README.md
community-skill-harvester/: SKILL.md  manifest.yaml
corpus/: README.md
docs/: architecture-diagrams.md  architecture.md  code-style.md  evaluation-cadence.md  testing-guide.md  troubleshooting.md  workflow.md
references/: eval-artifact-schema.md
scripts/: harvest_failures.py  meta-skill-studio.py  nightly-full-test.sh  pre-commit-check.sh  run-baseline-comparison.sh  run-corpus-eval.sh  run-evals.sh  run-full-cycle.sh  run-library-improvement-agents.mjs  run-meta-skill-cycle.sh  run-regression-suite.sh  sync-to-skills.sh  validate-skills.sh  validate_cli_contract.py  validate_eval_schema.py
skill-adaptation/: SKILL.md
skill-anti-patterns/: SKILL.md
skill-benchmarking/: SKILL.md
skill-catalog-curation/: SKILL.md
skill-creator/: SKILL.md
skill-deprecation-manager/: SKILL.md
skill-evaluation/: SKILL.md
skill-improver/: SKILL.md  manifest.yaml
skill-installer/: SKILL.md
skill-lifecycle-management/: SKILL.md
skill-orchestrator/: manifest.yaml
skill-packager/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+154 files in other folders)
