[package]
name = "meta-skill-studio"
version = "0.1.0"
description = "Cross-platform Meta Skill Studio"
authors = ["Scafforge Project"]
license = "MIT"
edition = "2021"

[lib]
name = "meta_skill_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
